--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -32,8 +32,6 @@ services:
       - POSTGRES_SSL_MODE=${POSTGRES_SSL_MODE}
     ports:
       - 5432:5432
-    volumes:
-      - .:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "sh -c 'pg_isready -U dev -d dev'"]
       interval: 10s
@@ -42,24 +40,28 @@ services:
       start_period: 30s
   migrations-up:
     container_name: magic_potions.migrations-up
-    environment:
-      - GOOSE_DRIVER=${GOOSE_DRIVER}
-      - GOOSE_DBSTRING=${GOOSE_DBSTRING}
     build:
       context: .
       dockerfile: Dockerfile.migrations
+    volumes:
+      - ./migrations:/app/migrations
+    environment:
+      - GOOSE_DRIVER=${GOOSE_DRIVER}
+      - GOOSE_DBSTRING=${GOOSE_DBSTRING}
     command: ["goose", "-dir", "migrations", "up"]
     depends_on:
       postgres:
         condition: service_healthy
   migrations-down:
     container_name: magic_potions.migrations-down
-    environment:
-      - GOOSE_DRIVER=${GOOSE_DRIVER}
-      - GOOSE_DBSTRING=${GOOSE_DBSTRING}
     build:
       context: .
       dockerfile: Dockerfile.migrations
+    volumes:
+      - ./migrations:/app/migrations
+    environment:
+      - GOOSE_DRIVER=${GOOSE_DRIVER}
+      - GOOSE_DBSTRING=${GOOSE_DBSTRING}
     command: ["goose", "-dir", "migrations", "reset"]
     profiles:
       - migrations-down
@@ -81,7 +83,7 @@ services:
   zookeeper:
     image: zookeeper-jmx
     hostname: zookeeper
-    container_name: zookeeper
+    container_name: magic_potions.zookeeper
     ports:
       - "2181:2181"
     environment:
@@ -93,30 +95,27 @@ services:
       timeout: 5s
       interval: 3s
       retries: 100
-
   kafka1:
     <<: *kafka_broker_base
-    container_name: kafka1
+    container_name: magic_potions.kafka1
     ports:
       - "19092:19092"
     environment:
       <<: *kafka_broker_env_base
       KAFKA_BROKER_ID: 1
       KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:19092,INTERNAL://kafka1:9092
-
   kafka2:
     <<: *kafka_broker_base
-    container_name: kafka2
+    container_name: magic_potions.kafka2
     ports:
       - "29092:29092"
     environment:
       <<: *kafka_broker_env_base
       KAFKA_BROKER_ID: 2
       KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:29092,INTERNAL://kafka2:9092
-
   kafka3:
     <<: *kafka_broker_base
-    container_name: kafka3
+    container_name: magic_potions.kafka3
     ports:
       - "39092:39092"
     environment:
@@ -124,7 +123,7 @@ services:
       KAFKA_BROKER_ID: 3
       KAFKA_ADVERTISED_LISTENERS: EXTERNAL://localhost:39092,INTERNAL://kafka3:9092
   consumer:
-    container_name: consumer
+    container_name: magic_potions.consumer
     environment:
       - KAFKA_BROKERS=${KAFKA_BROKERS}
       - POSTGRES_DSN=${POSTGRES_DSN}
