--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -3,6 +3,6 @@ global:
   evaluation_interval: 10s
 
 scrape_configs:
-- job_name: 'magic_potions.api'
+- job_name: 'api'
   static_configs:
-  - targets: ['magic_potions.api:8080']
+  - targets: ['api:8080']
