--- a/.env.dev
+++ b/.env.dev
@@ -10,5 +10,6 @@ GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=$POSTGRES_DSN
 
 API_PORT=8080
+GRPC_PORT=50051
 
 KAFKA_BROKERS=magic_potions.kafka1:9092,magic_potions.kafka2:9092,magic_potions.kafka3:9092
