--- a/.env.local
+++ b/.env.local
@@ -10,5 +10,6 @@ GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=$POSTGRES_DSN
 
 API_PORT=8080
+GRPC_PORT=50051
 
 KAFKA_BROKERS=localhost:19092,localhost:29092,localhost:39092
