add redis in recipes

--- a/.env.local
+++ b/.env.local
@@ -8,7 +8,15 @@ POSTGRES_DSN=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:$
 # goose
 GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=$POSTGRES_DSN
-
+#Redis
+REDIS_HOST=localhost
+REDIS_PASSWORD=1234
+REDIS_USER=user123
+REDIS_USER_PASSWORD=1234
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_DSN=redis://${REDIS_USER}:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}/${REDIS_DB}
+#Ports
 API_PORT=8080
 GRPC_PORT=50051
 
