--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -69,6 +69,32 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+  redis:
+    image: redis:latest
+    container_name: magic_potions.redis
+    hostname: redis
+    environment:
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
+      - REDIS_PORT=${REDIS_PORT}
+    ports:
+      - 6379:${REDIS_PORT}
+    volumes:
+      - ./redisdata:/data
+    restart: always
+    command: >
+      sh -c '
+        mkdir -p /usr/local/etc/redis &&
+        echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
+        echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+        echo "user default on nopass ~* +@all" > /usr/local/etc/redis/users.acl &&
+        echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+        redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
+      '
   api:
     container_name: magic_potions.api
     hostname: api
